# lgactivities

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
activities/: act_type.py  admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
activities/api/: urls.py  views.py
activities/fixtures/: activity_type.json
activities/migrations/: 0001_initial.py  0002_auto_20210516_0519.py  0002_initial.py  0003_auto_20210516_0524.py  0004_segment_staring.py  0005_auto_20210517_0519.py  0006_auto_20210517_0524.py  0007_auto_20210518_0009.py  0008_rename_staring_segment_starred.py  0009_rename_starred_segment_staring.py  0010_auto_20210523_0552.py  0011_auto_20210524_0301.py  0012_auto_20210524_0341.py  0013_alter_segmenteffort_options.py  0014_activity_user.py  0015_auto_20210630_0418.py  0016_alter_staredsegment_user.py  0017_activity_icon.py  0018_auto_20210817_0213.py  0019_auto_20210817_0214.py  0020_auto_20210817_0251.py  0021_alter_segment_name.py  0022_auto_20210817_0539.py  0023_auto_20210818_2041.py  0024_alter_activity_user.py  0025_auto_20220410_2201.py  0026_auto_20220411_0117.py  0027_rename_activity_type_activity_type.py  0028_rename_type_activitytype_name.py  0029_alter_activity_options.py  0030_segment_type.py
activities/templatetags/: segment_user.py
autres/: requirements.txt
calendarapp/: urls.py  utils.py  views.py
connections/: admin.py  models.py  urls.py  utils.py  views.py
connections/migrations/: 0001_initial.py  0002_auto_20210701_0041.py  0003_auto_20210701_0459.py  0004_delete_token.py
getactivities/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
getactivities/fixtures/: social_app.json
getactivities/migrations/: 0001_initial.py  0002_alter_getactivitiestask_frequency.py  0002_initial.py  0003_alter_getactivitiestask_frequency.py  0004_auto_20210817_0213.py  0005_alter_getactivitiestask_start_date.py  0006_auto_20210820_1910.py  0007_rename_getactivitiestask_fetchactivitiestask.py  0008_auto_20210823_2131.py  (+10 more)
lgactivities/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
profiles/: admin.py  forms.py  models.py  views.py
scripts/: add_type_to_segments.py
src/: celery_lgactivities  manage.py
templates/: base.html  footer.html  header.html  index.html  js.html  messages_display.html  navbar.html  robots.txt
(+96 files in other folders)
