[project]
name = "lgactivities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp>=5.3.1",
    "argh>=0.31.3",
    "asgiref>=3.11.1",
    "async-timeout>=5.0.1",
    "billiard>=4.2.4",
    "bitstruct>=8.22.1",
    "cached-property>=2.0.1",
    "celery>=5.4.0",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "chardet>=7.4.3",
    "charset-normalizer>=3.4.7",
    "click>=8.4.1",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "crispy-bootstrap5>=2026.3",
    "cron-descriptor>=2.0.8",
    "cryptography>=48.0.0",
    "defusedxml>=0.7.1",
    "deprecated>=1.3.1",
    "django==4.2.13",
    "django-allauth>=65.1.0",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-crispy-forms>=2.5",
    "django-dotenv>=1.4.2",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "django-timezone-field>=7.2.1",
    "djangorestframework>=3.17.1",
    "docopt>=0.6.2",
    "et-xmlfile>=2.0.0",
    "fit-tool>=0.9.15",
    "fontawesome-free>=5.15.4",
    "gevent>=26.5.0",
    "greenlet>=3.5.1",
    "gunicorn>=26.0.0",
    "idna>=3.16",
    "importlib-metadata>=9.0.0",
    "jdcal>=1.4.1",
    "kombu>=5.4.2",
    "mysqlclient>=2.2.8",
    "num2words>=0.5.14",
    "oauthlib>=3.3.1",
    "openpyxl>=3.1.5",
    "packaging>=26.2",
    "pika>=1.4.1",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "polyline>=2.0.4",
    "prometheus-client>=0.25.0",
    "prompt-toolkit>=3.0.52",
    "pycparser>=3.0",
    "pyjwt>=2.13.0",
    "pyparsing>=3.3.2",
    "python-crontab>=3.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-http-client>=3.3.7",
    "python3-openid>=3.2.0",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "six>=1.17.0",
    "sqlparse>=0.5.5",
    "starkbank-ecdsa>=2.3.1",
    "tenacity>=9.1.4",
    "typing-extensions>=4.15.0",
    "tzdata==2023.3",
    "urllib3>=2.7.0",
    "vine>=5.1.0",
    "watchdog>=6.0.0",
    "watchdog-gevent>=0.2.1",
    "wcwidth>=0.7.0",
    "wrapt>=2.2.1",
    "zipp>=4.1.0",
    "zope-event>=6.2",
    "zope-i18nmessageid>=8.2",
    "zope-interface>=8.4",
]
